fix hovers that shouldn't be happening on mobile

--- a/assets/sass/_tooltip.scss
+++ b/assets/sass/_tooltip.scss
@@ -47,7 +47,7 @@
         position: absolute;
         width: 135px;
         z-index: 5;
-        transition: transform .2s .1s ease;
+        transition: transform .1s .1s ease;
 
         &:hover {
             width: 215px;
@@ -55,7 +55,7 @@
         }
 
         &.shrink {
-            transform: scale(.95);
+            transform: scale(.97);
             opacity: .75;
         }
     }
@@ -282,7 +282,10 @@ a.tooltip__link {
     left: 40%;
 
     &:hover .map-tooltip {
-        width: 172px;
+
+        @media (min-width: $bootstrap_mobile) {
+            width: 172px;
+        }
     }
 
     &:after {
@@ -312,7 +315,9 @@ a.tooltip__link {
     top: 28%;
 
     &:hover .map-tooltip {
-        width: 172px;
+        @media (min-width: $bootstrap_mobile) {
+            width: 172px;
+        }
     }
 
     &:after {
@@ -368,7 +373,9 @@ a.tooltip__link {
     left: 85%;
 
     &:hover .map-tooltip {
-        width: 172px;
+        @media (min-width: $bootstrap_mobile) {
+            width: 172px;
+        }
     }
 
     &:after {
@@ -398,7 +405,9 @@ a.tooltip__link {
     top: 39%;
 
     &:hover .map-tooltip {
-        width: 172px;
+        @media (min-width: $bootstrap_mobile) {
+            width: 172px;
+        }
     }
 
     &:after {
